--- a/little-lemon-booking-final/src/App.css
+++ b/little-lemon-booking-final/src/App.css
@@ -37,29 +37,24 @@
   }
 }
 */
-@font-face { 
-  font-family: Marzaki;
-  src: url('https://fonts.googleapis.com/css?family=Markazi Text')
-}
-
-@font-face { 
-  font-family: Karla;
-  src: url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap')
-}
 
 .Header {
   display: grid;
   grid-template-rows: 0px;
+  font-family: "Markazi Text", serif;
 }
 
 .Nav{
-  background-color: rgb(179, 179, 177);
   display: grid;
   place-items: center;
   grid-template-columns: 0.2fr repeat(7, 1fr) 0.2fr;
   grid-template-rows: auto;
   position: sticky;
   top: 0;
+  padding-left: 7%;
+  padding-right: 7%;
+  background-color: white;
+  z-index: 1;
 }
 
 .Nav-menu {
@@ -80,21 +75,23 @@
 }
 
 .Nav-link {
+  cursor: pointer;
   text-decoration: none;
-  font-family: Karla;
   color: rgb(52, 62, 52);
+  font-family: "Karla", sans-serif;
+  font-weight: bold;
 }
 
 .Main {
   display: grid;
-  background-color: rgb(242, 242, 242);
+  background-color: white;
   place-items: center;
   text-align: center;
-  grid-template-rows: 100vh;
+  grid-template-rows: CallToAction Specials;
 }
 
 .Footer{
-  background-color: rgb(130, 131, 128);
+  background-color: white;
   display: grid;
   place-items: center;
   grid-template-columns: 0.2fr repeat(4, 1fr) 0.2fr;
@@ -103,6 +100,7 @@
 
 .Footer-menu{
   list-style-type: none;
+  max-width: 100%;
   display: grid;
   place-items: center;
   text-align: center;
@@ -117,17 +115,212 @@
 
 .Footer-link {
   text-decoration: none;
-  font-family: Karla;
   color: rgb(52, 62, 52);
+  font-family: "Karla", sans-serif;
+}
+
+.CallToAction {
+  display: flex;
+  border: none;
+  background-color: #495E57;
+  min-width: 100%;
+  height: 300px;
+  text-align: left;
+  margin-top: 0%;
+  position:relative;
+  overflow:visible;
+}
+
+.CallToActionCard {
+  max-width: 25%;
+  padding-right: 10%;
+  padding-left: 15%;
+}
+
+.Header1 {
+  margin-top: 5%;
+  font-family: "Markazi Text", serif;
+  font-weight: 400;
+  font-size: 46px;
+  color: #F4CE14;
+  margin-bottom: 0%;
+  height: 15%;
+}
+
+.Header2 {
+  margin-top: 0%;
+  padding-top: 0%;
+  font-family: "Markazi Text", serif;
+  font-weight: 400;
+  font-size: 32px;
+  height: 10%;
+  color: white;
+}
+
+.Actionmessage {
+  font-family: "Karla", sans-serif;
+  font-size: 17px;
+  font-weight: 500;
+  margin-top: 0%;
+  color: white;
+  width: 235px;
+  height: fit-content;
+}
+
+.Actionbutton {
+  border: none;
+  height: 35px;
+  width: 160px;
+  border-radius: 10px;
+  background-color: #F4CE14;
+  font-family: "Karla", sans-serif;
+  font-size: 17px;
+  font-weight: 750;
+  color: #333333;
+  margin-bottom: 10%;
+  padding: 2px 10px;
+}
+
+.Actionimage {
+  margin-top: 0%;
+  margin-right: 5%;
+  margin-left: 25%;
+  height: 400px;
+  transform: translateY(-35px); 
+  clip-path: inset(15% 5% 10% 0% round 3%);
+}
+
+.Specials {
+  display: grid;
+  grid-template-rows: auto auto;
+  min-width: 100%;
+  padding-top: 75px;
+}
+
+.Specialsaction {
+  display: flex;
+  border: none;
+  height: 100px;
+  text-align: left;
+  margin-bottom: 10px;
+}
+
+.Specialsheader {
+  margin-top: 0%;
+  font-family: "Markazi Text", serif;
+  font-weight: 600;
+  font-size: 46px;
+  color: #333333;
+  margin-bottom: 0%;
+  height: 15%;
+  padding-right: 30%;
+  padding-left: 15%;
+}
+
+.Specialsbutton {
+  border: none;
+  height: 50px;
+  width: 160px;
+  border-radius: 10px;
+  background-color: #F4CE14;
+  font-family: "Karla", sans-serif;
+  font-size: 17px;
+  font-weight: 750;
+  color: #333333;
+  padding: 3px 10px;
+  margin-left: 5%;
+}
+
+.Specialslist {
+  display: flex;
+  border: none;
+  max-width: 100%;
+  height: auto;
+  overflow: hidden;
+  margin-right: 11%;
+  margin-left: 11%;
+  
+}
+
+.Dishcard {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 190px 75px 150px 50px 50px;
+  overflow: hidden;
+  width: 400px;
+  margin: 0% 3% 0% 3%;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  background-color: #EDEFEE;
+  text-align: left;
+}
+
+.Dishimage {
+  grid-column: span 2;
+  margin-bottom: 1px;
+  height: 120%;
+  clip-path: inset(0% 0% 50px 0% round 0%);
+}
+
+.Dishname {
+  font-family: "Markazi Text", serif;
+  font-weight: 600;
+  font-size: 20px;
+  margin: 15% 0% 0% 20%;
+}
+
+.Dishprice {
+  font-family: "Karla", sans-serif;
+  font-weight: 800;
+  font-size: 14px;
+  color: #EE9972;
+  margin: 18% 5% 0% 50%;
+}
+
+.Dishdescription {
+  grid-column: span 2;
+  font-family: "Karla", sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+  color: #495E57;
+  margin: 0% 10% 0% 10%;
+}
+
+.Dishaction {
+  grid-column: span 2;
+  max-width: 100%;
+  display: flex;
+  font-family: "Karla", sans-serif;
+  font-size: 15px;
+  font-weight: 750;
+  text-align: left;
+  color: #495E57;
+  margin: 0% 10% 0% 10%;
+  border: none;
+}
+
+.Deliveryicon {
+  margin: 7% 0% 0% 5%;
+  height: 40%;
+  
+}
+.section {
+  width: 100%;
+}
+.Active-link {
+  color: #F4CE14;
+  font-weight: 900;
+}
+
+.BookingImage {
+  max-width: 100%;
 }
 
 /*For smaller screens*/
 @media (max-width: 800px) {
   .Nav{
-    background-color: rgb(179, 179, 177);
     position: sticky;
     top: 0;
-    
   }
   
   .Nav-menu {
@@ -145,7 +338,6 @@
   
   .Nav-link {
     text-decoration: none;
-    font-family: Karla;
     color: rgb(52, 62, 52);
     max-height: 0;
     transition: max-height .5s ease-out;
@@ -169,7 +361,6 @@
   
   .Footer-link {
     text-decoration: none;
-    font-family: Karla;
     color: rgb(52, 62, 52);
   }
 }
